Fix Client label align

--- a/src/app/admin/supplier/risk-analysis/analysis-business/analysis-business.component.css
+++ b/src/app/admin/supplier/risk-analysis/analysis-business/analysis-business.component.css
@@ -4,10 +4,6 @@
   list-style: none;
 }
 
-:host ::ng-deep .days ol {
-  display: block;
-}
-
 h1 { 
   font-size: 1.5em;
   margin: 70px 42px;
@@ -30,7 +26,7 @@ over-specified to win specificity battle */
 /*** month headings ***/
 :host ::ng-deep .month ol {
   display: block;
-  height: 40px;
+  height: 30px;
 }
 
 :host ::ng-deep .month li {
@@ -41,7 +37,7 @@ over-specified to win specificity battle */
 
 /** chart **/
 :host ::ng-deep .chart {
-  display: inline-block;
+  width: 100%;
 }
 
 /*** day of week heading ***/
@@ -64,11 +60,29 @@ over-specified to win specificity battle */
   margin-top: 15px;
 }
 
+:host ::ng-deep .days ol {
+  display: block;
+}
+
+:host ::ng-deep .days ol .name {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  height: 30px;
+  margin-right: 10px;
+}
+
+:host ::ng-deep .days ol .name label {
+  position: absolute;
+  top: 30%;
+  text-align: end;
+  right: 0px;
+}
+
 /* create vertical weeks */
 :host ::ng-deep .week {
-  width: 100%;
-  height: 40px;
-  display: block;
+  display: inline-block;
+  height: 30px;
 }
 
 :host ::ng-deep .week li {
